--- a/public/css/products/update.css
+++ b/public/css/products/update.css
@@ -145,7 +145,23 @@ section {
     box-shadow:0px 0px 10px #AD9863;
 }
 
+p.errores {
+    color: red;
+    margin-top: 5px;
+    font-size: 15px;
+}
 
+input.errores {
+    box-shadow: 0px 0px 1px 1px #f04747bb;
+}
+
+input.errores:hover {
+    box-shadow:0px 0px 10px #f04747bb;
+}
+
+.display-errores {
+    display: none;
+}
 
 @media (min-width: 768px) {
  body{     
