--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -4,13 +4,14 @@
     <main class="main-register">
 
 
-        <form action ="/users/" enctype="multipart/form-data" method="post" class="register-signin">
+        <form action ="/users/" enctype="multipart/form-data" method="post" id="formulario" class="register-signin">
+            <p class="display-error" id="formulario-error"></p>
             <h2>Registro</h2>
             <fieldset class="fs-nombre" id="fs-nombre">
                 <label for="nombre">Nombre</label>
                 <input name="nombre" type="text" id="nombre" placeholder="Ingrese su nombre completo" 
                        value= "<%= locals.oldData ? oldData.nombre : null %>"> 
-                       <p class="errores" class="display-error" id="nombre-error"></p> 
+                       <p class="display-error" id="nombre-error"></p> 
                 <% if (locals.errors && errors.nombre) { %>
                     <p class="errores"><%= errors.nombre.msg %> </p>
                 <% } %>
@@ -19,7 +20,7 @@
                 <label for="apellido">Apellido</label>
                 <input name="apellido" type="text" id="apellido" placeholder="Ingrese su apellido"
                        value= "<%= locals.oldData ? oldData.apellido : null %>">
-                       <p class="errores" class="display-error" id="apellido-error"></p>
+                       <p class="display-error" id="apellido-error"></p>
                 <% if (locals.errors && errors.apellido) { %>
                     <p class="errores"><%= errors.apellido.msg %> </p>
                 <% } %>
@@ -28,7 +29,7 @@
                 <label for="email">Correo Electronico</label>
                 <input type="text" name="email" id="email" placeholder="Direccion de Email"
                        value= "<%= locals.oldData ? oldData.email : null %>">
-                       <p class="errores" class="display-error" id="email-error"></p>
+                       <p class="display-error" id="email-error"></p>
                 <% if (locals.errors && errors.email) { %>
                     <p class="errores"><%= errors.email.msg %> </p>
                 <% } %>
@@ -36,19 +37,22 @@
             <fieldset class="fs-pass-reg">
                 <label for="password">Contraseña</label>
                 <input name="password" type="password" id="password" placeholder="***********">
+                <p class="display-error" id="password-error"></p>
                 <% if (locals.errors && errors.password) { %>
                     <p class="errores"><%= errors.password.msg %> </p>
                 <% } %>
             </fieldset>
             <fieldset class="fs-pass-reg2">
                 <label for="pass-reg2">Confirmar Contraseña</label>
-                <input type="password" id="pass-reg2" placeholder="Confirmar">
+                <input name="password" type="password" id="password2" placeholder="Confirmar">
+                <p class="display-error" id="password2-error"></p>
             </fieldset>
             <label class="boton-imagen" for="file">
                 <input type="file" name="file" id="file" multiple>
             </label>
             <fieldset class="fs-button">
-                <button type="submit" >Registrarse</button>    
+                <button type="submit" id="formulario" >Registrarse</button> 
+                <p class="display-error" id="formulario-error"></p>   
             </fieldset>
             <section class="fs-conectar">
                 <a>Registrarme con | </a>
