--- a/src/views/users/register.ejs
+++ b/src/views/users/register.ejs
@@ -36,22 +36,19 @@
             <fieldset class="fs-pass-reg">
                 <label for="password">Contraseña</label>
                 <input name="password" type="password" id="password" placeholder="***********">
-                <p class="display-error" id="password-error"></p>
                 <% if (locals.errors && errors.password) { %>
                     <p class="errores"><%= errors.password.msg %> </p>
                 <% } %>
             </fieldset>
             <fieldset class="fs-pass-reg2">
                 <label for="pass-reg2">Confirmar Contraseña</label>
-                <input name="password" type="password" id="password2" placeholder="Confirmar">
-                <p class="display-error" id="password2-error"></p>
+                <input type="password" id="pass-reg2" placeholder="Confirmar">
             </fieldset>
             <label class="boton-imagen" for="file">
                 <input type="file" name="file" id="file" multiple>
             </label>
             <fieldset class="fs-button">
-                <button type="submit" id="formulario" >Registrarse</button> 
-                <p class="display-error" id="formulario-error"></p>   
+                <button type="submit" >Registrarse</button>    
             </fieldset>
             <section class="fs-conectar">
                 <a>Registrarme con | </a>
