--- a/public/css/home.css
+++ b/public/css/home.css
@@ -109,11 +109,87 @@ a {
     display: none;
 }
 
-
-
 .bodegas-desktop {
     display: none;
 }
+
+.catalogo{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.vinos{
+    display: flex;
+    min-width:262.9px;
+    max-width:263px;
+    max-height: 397.5px;
+    min-height: 397.47px;
+    flex-wrap: wrap;
+    align-items: center;
+    justify-content: space-between;
+    flex-direction: column;
+    margin: 20px 2%;
+    background: white;
+    box-shadow: 0px 0px 10px rgb(100, 100, 100);
+    box-shadow: none;
+    border-radius: 10px;
+    transition: all 0.2s;
+}
+
+.vinos:hover{
+    box-shadow:0px 0px 10px rgb(100, 100, 100);
+}
+
+.vinos img {
+    border-top-left-radius: 10px;
+    border-top-right-radius: 10px;
+    max-height: 300px;
+    min-height: 299.99px;
+    max-width: 263px;
+    min-width: 262.99px;
+}
+
+.imagen-producto {
+    max-width: 40%;
+}
+
+.info{
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    gap: 3px;
+    font-style: italic;
+    font-family: "Roboto";
+    font-size: 12px;
+}
+
+.boton-agregar {width: 20vh;
+    margin-bottom: 3vh;
+    border-radius: 6px;
+    border: none;
+    background-color: #383D41;
+    color: #ebebeb ;
+    height: 1.5em;
+    transition: all 0.2s;
+}
+
+.boton-agregar:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
+.boton-agregar:focus {
+    background-color: #AD9863;
+    color: #383D41;
+    font-weight: bold;
+    box-shadow: none;
+}
+
+main input:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
 
 @media (min-width: 768px) {  /*TABLET*/
   
@@ -226,10 +302,6 @@ a {
         flex-wrap: wrap;
     }
 
-    .vinos {
-        width: 46%;
-    }
-
 }
 
 @media  (min-width: 1200px) {
@@ -272,7 +344,7 @@ a {
         font-size: 3.8vh;
         text-align: center;
         min-width: 20vh;
-        margin: 10px 0;
+        margin: 3vh 0;
     }
     
     .text-bodega {
@@ -286,10 +358,8 @@ a {
         flex-wrap: nowrap;
     }
 
-    .vinos {
-        max-width: 25%;
-        margin-left: 2.5%;
-        margin-right: 2.5%;
+    .catalogo {
+        margin: 0 3%
     }
 
 }
