--- a/src/views/users/profile.ejs
+++ b/src/views/users/profile.ejs
@@ -11,7 +11,9 @@
             <form action ="/users/logout" method="post" class="profile">
                 
                     <button type="submit">Logout</button>    
-                
+                    <a class="icono-edit" href="/users/update/<%= user.id %>">
+                        <i class= "fas fa-pen"></i>
+                    </a>
             </form>
 
     </main>
