--- a/public/css/profile.css
+++ b/public/css/profile.css
@@ -8,7 +8,7 @@
 
 .main-profile {
     background-color: #F4F4F4;
-    min-height: 50vh;
+    min-height: 59vh;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
@@ -26,8 +26,46 @@
     text-align: start;
 }
 
+main button {
+    background-color: #414141;
+    padding: 10px 5px 10px 5px;
+    border: solid #AD9863 1px;
+    border-radius: 4px;
+    color: white;
+    letter-spacing: 1px;
+    width: 125px;
+}
 
+main button:hover {
+    box-shadow:0px 0px 10px #AD9863;
+}
+
+main button:focus {
+    background-color: #AD9863;
+    color: #383D41;
+    font-weight: bold;
+    box-shadow: none;
+}
+
+.nombreUsuario {
+    font-size: 20px;
+    margin-top: 10px;
+}
+
+.mailUsuario {
+    font-size:16px;
+    margin: 10px 0
+}
 
 .imagen-profile{
-    max-width: 100px;
+    width: 70%;
+    max-width: 300px;
+    display: flex;
+    margin: auto;
+}
+
+.botones {
+    display: flex;
+    justify-content: space-between;
+    margin-top: 15px;
 }
