--- a/src/views/carrito.ejs
+++ b/src/views/carrito.ejs
@@ -7,45 +7,38 @@
 <section class="secciones-carrito">
     <article class="detalle-carrito"> <!--Reemplazar por express-->       
         <h3>Carrito de compras</h3>
-        <article class="producto-agregado">            
-            <p class="producto-nombre">Cabernet Sauvignon</p>            
-            <p class="producto-precio">$ 2.500,00</p>            
-            <div class="cantidades">
-                <p class="mas-menos">-</p>
-                <p class="cantidad">1</p>
-                <p class="mas-menos">+</p>
-            </div>
-            <p class="producto-total">$ 7.500,00</p>        
-        </article>
-        <article class="producto-agregado">            
-            <p class="producto-nombre">Cabernet Sauvignon</p>            
-            <p class="producto-precio">$ 2.500,00</p>            
-            <p class="producto-cantidad">3</p>
-            <p class="producto-total">$ 7.500,00</p>        
-        </article>
-        <article class="producto-agregado">            
-            <p class="producto-nombre">Cabernet Sauvignon</p>            
-            <p class="producto-precio">$ 2.500,00</p>            
-            <p class="producto-cantidad">3</p>
-            <p class="producto-total">$ 7.500,00</p>        
-        </article>
-        <article class="producto-agregado">            
-            <p class="producto-nombre">Cabernet Sauvignon</p>            
-            <p class="producto-precio">$ 2.500,00</p>            
-            <p class="producto-cantidad">3</p>
-            <p class="producto-total">$ 7.500,00</p>        
-        </article>
-        <article class="producto-agregado">            
-            <p class="producto-nombre">Cabernet Sauvignon</p>            
-            <p class="producto-precio">$ 2.500,00</p>            
-            <p class="producto-cantidad">3</p>
-            <p class="producto-total">$ 7.500,00</p>        
-        </article>
-        <article class="producto-agregado">            
-            <p class="producto-nombre">Cabernet Sauvignon</p>            
-            <p class="producto-precio">$ 2.500,00</p>            
-            <p class="producto-cantidad">3</p>
-            <p class="producto-total">$ 7.500,00</p>        
+        <article class="producto-agregado-carrito">        
+                <% if (locals.products) { %> 
+                    <% if (products.length > 0 )  { %>
+                     <!-- <ul class="products"> -->
+                        <% products.slice(0, 5).forEach(product => { %>
+                            <article class="vinos-carrito">
+                            <!-- <li class="product"> -->
+                                <a href="/catalogo/<%= product.id %> " class="titulo-producto-carrito">  
+                                    
+                                    <% if (product.image) { %>
+                                            <img class="imagen-profile-carrito" src="/uploads/products/<%= product.image %>" alt="" srcset="">                                
+                                    <% } else { %>
+                                        <img class="imagen-producto-carrito" src="/uploads/products/default.jpg" alt="" srcset="">
+                                    <% }%>
+                                </a>
+                                <a href="/catalogo/<%= product.id %> " class="titulo-producto-carrito">  
+                                    <span class="info-carrito-nombre">
+                                        <%= product.name %> 
+                                    </span>
+                                </a>    
+                                    <span class="info-carrito-precio">
+                                        $<%= product.price %> 
+                                    </span>
+                                </a>             
+                            </article>  
+                        <% }) %>
+                    <% } else { %>
+                        <h2> No hay producto</h2>
+                    <% } %>
+                    <% } else { %>
+                        <h2> No hay producto</h2>
+               <% } %>
         </article>
     </article>
 
@@ -115,7 +108,45 @@
 <article class="titulares">Recomendaciones</article>
 
 <section class="recomendaciones-carrito">
-  <!--CARRUSEL-->
+    <section class="catalogo">
+        
+        <% if (locals.products) { %> 
+            <% if (products.length > 0 )  { %>
+             <!-- <ul class="products"> -->
+                <% products.slice(12, 16).forEach(product => { %>
+                    <article class="vinos">
+                    <!-- <li class="product"> -->
+                        <a href="/catalogo/<%= product.id %> " class="titulo-producto">  
+                            
+                            <% if (product.image) { %>
+                                    <img class="imagen-profile" src="/uploads/products/<%= product.image %>" alt="" srcset="">                                
+                            <% } else { %>
+                                <img class="imagen-producto" src="/uploads/products/default.jpg" alt="" srcset="">
+                            <% }%>
+                            </a>
+                            <section class="info">
+                            <span>
+                                <%= product.name %> 
+                            </span>
+                            <span>
+                                $<%= product.price %> 
+                            </span>
+                            </section>
+                            <section class="botones">
+                            <form class="fs-button">
+                                <input type="hidden" name="id" value="<%= product.id %>">
+                                <button class="boton-agregar">Agregar</button>
+                            </form>
+                        </section>                   
+                    </article>  
+                <% }) %>
+            <% } else { %>
+                <h2> No hay producto</h2>
+            <% } %>
+            <% } else { %>
+                <h2> No hay producto</h2>
+       <% } %>
+        </section>
 </section>
 
 
