--- a/public/css/products/list.css
+++ b/public/css/products/list.css
@@ -65,6 +65,11 @@ span{
     font-style: normal;
     text-decoration: none;
     color: black;
+    transition: all 0.2s;
+}
+
+.menuVertical nav a:hover{
+    text-decoration: underline;
 }
 
 .titulo-producto {
