--- a/src/views/products/detail.ejs
+++ b/src/views/products/detail.ejs
@@ -3,7 +3,7 @@
     <%- include("../includes/header") %>   
     <main>
         <h2><%= locals.title ? title : null %> </h2>
-        
+
         <section class="caja-producto-principal">
 
             <picture class="imagen-producto">
@@ -32,7 +32,20 @@
                     <p><%= product.maridaje %></p>
                 </article>  
                     <p class="precio">$<%= product.price %></p>
+                    <section class="botones">
+                        <a class="icono-edit" href="/products/update/<%= product.id %>">
+                            <i class= "fas fa-pen"></i>
+                        </a>
+                        <form action="/products/delete/<%= product.id %>" method="post" class="form">
+                            <input type="hidden" name="id" value="<%= product.id %>">
+                            <button class="boton-delete" type="submit" id="button">
+                                <i class="fas fa-trash"></i>
+                            </button>
+                        </form>
+                    </section>
                 </article>
+              
+             
                 
             <div class="esquinero1"></div>
             <div class="esquinero2"></div> 
