--- a/public/css/catalogo.css
+++ b/public/css/catalogo.css
@@ -64,8 +64,14 @@ span{
     font-size: 1rem;
     font-style: normal;
     text-decoration: none;
-    color: black;
+    color: black;    
+    transition: all 0.2s;
 }
+
+.menuVertical nav a:hover{
+    text-decoration: underline;
+}
+
 
 .titulo-producto {
     text-decoration: underline;
