--- a/public/css/products/detail.css
+++ b/public/css/products/detail.css
@@ -165,6 +165,39 @@ h2 {
     box-shadow: none;
 }
 
+.botones {
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
+    margin: 0 5% 5% 0;
+}
+
+.boton-delete {
+    font-size: 30px;
+    box-sizing: 0px;
+    border-radius:100px;
+    color: #AD9863;
+    border: none;
+    background-color: white;
+    transition: all 0.2s;
+}
+
+.boton-delete:hover{
+    color: #414141;
+}
+
+.icono-edit {
+    color: #AD9863;
+    font-size: 30px;
+    transition: all 0.2s;
+    margin-right: 5%;
+}
+
+.icono-edit:hover {
+    color: #414141;
+} 
+
+
 .esquinero1 {
     position: absolute;
     width: 45px;
