--- a/src/views/includes/header.ejs
+++ b/src/views/includes/header.ejs
@@ -13,6 +13,7 @@
                     <% } else if (user && user.isAdmin) { %>                        
                         <a class="borde" href="/products">Productos</a>
                         <a href="/products/create">Crear</a>
+                        <a class="borde" href="http://localhost:3000/">Dashboard</a>
                     <% } %> 
 
 
