--- a/public/css/vino.css
+++ b/public/css/vino.css
@@ -17,7 +17,14 @@ main {
 
 img {
     max-width: 100%;
-    max-height: 100%;
+    max-height: 100%;    
+}
+
+.imagen-producto img{
+    max-height: 425px;
+    min-height: 299.99px;
+    max-width: 380px;
+    min-width: 262.99px;
 }
 
 .caja-producto-principal {
