--- a/public/css/products/create.css
+++ b/public/css/products/create.css
@@ -146,6 +146,11 @@ section {
     box-shadow:0px 0px 10px #AD9863;
 }
 
+.display-error {
+    margin-top:5px;
+    color: red;
+}
+
 
 @media (min-width: 768px) {
  body{     
