--- a/src/views/products/update.ejs
+++ b/src/views/products/update.ejs
@@ -9,11 +9,13 @@
             <label for="name">Nombre</label>
                 <input type="text" name="name" id="name" placeholder="Nombre del vino" 
                        value= "<%= locals.product ? product.name : null %>">
+                       <p  class="display-error" id="name-error"></p>
         </fieldset>
         <fieldset>    
             <label for="anno">Año de Cosecha</label>
                 <input type="number" name="anno" id="anno" placeholder="Año de cosecha"
                        value= "<%= locals.product ? product.anno : null %>">
+                       <p  class="display-error" id="anno-error"></p>
         </fieldset>    
         <fieldset>
             <label for="varietal">Varietal</label>
@@ -60,10 +62,12 @@
         <fieldset class="maridaje-cata">
             <label for="notasCata">Notas de Cata</label>        
                 <textarea rows="3" cols="30" name="notasCata" id="notasCata" placeholder="Nota de cata"><%= locals.product ? product.notasCata : null %></textarea>
+                <p  class="display-error" id="notasCata-error"></p>
         </fieldset>
         <fieldset class="maridaje-cata">     
             <label for="maridaje">Maridaje</label> 
             <textarea rows="3" cols="30" name="maridaje" id="maridaje" placeholder="Maridaje"><%= locals.product ? product.maridaje : null %></textarea>
+            <p  class="display-error" id="maridaje-error"></p>
         </fieldset>
         <section class="check">
             <fieldset class="fs-kl">    
@@ -90,13 +94,13 @@
             <label for="price">Precio</label>
                 <input type="number" name="price" id="price" placeholder="Precio" min="0"
                        value= "<%= locals.product ? product.price : null %>">
-            
+                       <p  class="display-error" id="price-error"></p>
         </fieldset>
         <fieldset>
             <button type="submit">Save</button> 
         </fieldset>
     </form>
-
+    <script src="/js/products.js"></script>
 </main>
 
     <%- include("../includes/footer") %>
